--- a/landing-page/style.css
+++ b/landing-page/style.css
@@ -57,3 +57,24 @@ header #judul {
 }
 
 /* header */
+
+/* Showcase */
+
+#showcase {
+    min-height: 400px;
+    background: url(/landing-page/asset/Background\ jelek.png);
+    text-align: center;
+    color: #ffffff;
+}
+
+#showcase h2 {
+    margin-top: 100px;
+    font-size: 55px;
+    margin-bottom: 10px;
+}
+
+#showcase p {
+    font-size: 20px;
+}
+
+/* Showcase */
