--- a/landing-page/style.css
+++ b/landing-page/style.css
@@ -78,3 +78,47 @@ header #judul {
 }
 
 /* Showcase */
+
+/* Newsletter */
+
+#newsletter {
+    padding: 15px;
+    color: #ffffff;
+    background: #38A3A5;
+    ;
+}
+
+#newsletter h1 {
+    float: left;
+}
+
+#newsletter form {
+    float: right;
+    margin-top: 15px;
+}
+
+#newsletter input[type="email"] {
+    padding: 4px;
+    height: 25px;
+    width: 250px;
+}
+
+.button_1 {
+    height: 38px;
+    background: #3c8bf3;
+    border: 0;
+    padding-left: 20px;
+    padding-right: 20px;
+    color: #ffffff;
+    
+}
+
+button:hover {
+    box-shadow: 0 8px 6px -6px black;
+}
+
+.text {
+    color: #ffffff;
+}
+
+/* Newsletter */
